// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correcly closed 1`] = `
.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-7:last-of-type {
  margin-bottom: 0;
}

.emotion-7:empty {
  display: none;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

<body>
  <div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <label
            class="emotion-0"
            for="test-input-id"
            id="test-label-id"
          >
            Fruits
          </label>
          <div
            class="emotion-5"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-menu-id"
              aria-expanded="false"
              aria-labelledby="test-label-id"
              autocomplete="off"
              class="emotion-1"
              id="test-input-id"
              label="Fruits"
              role="combobox"
              type="text"
              value=""
            />
            <span
              class="emotion-4"
            >
              <button
                aria-controls="test-menu-id"
                aria-expanded="false"
                aria-label="Show options"
                class="emotion-3"
                id="downshift-267-toggle-button"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-2"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    />
  </div>
</body>
`;

exports[`rendering renders correcly opened 1`] = `
.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-7:last-of-type {
  margin-bottom: 0;
}

.emotion-7:empty {
  display: none;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-21 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-9:last-of-type {
  border-bottom: none;
}

.emotion-9:hover {
  background: #F0F0F5;
}

.emotion-9:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<body>
  <div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <label
            class="emotion-0"
            for="test-input-id"
            id="test-label-id"
          >
            Fruits
          </label>
          <div
            class="emotion-5"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-labelledby="test-label-id"
              autocomplete="off"
              class="emotion-1"
              id="test-input-id"
              label="Fruits"
              role="combobox"
              type="text"
              value=""
            />
            <span
              class="emotion-4"
            >
              <button
                aria-controls="test-menu-id"
                aria-expanded="true"
                aria-label="Hide options"
                class="emotion-3"
                id="downshift-268-toggle-button"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-2"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-22"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-21"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-0"
            role="option"
          >
            Apple
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-1"
            role="option"
          >
            Avocado
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-2"
            role="option"
          >
            Banana
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-3"
            role="option"
          >
            Blueberry
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-4"
            role="option"
          >
            Coconut
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-5"
            role="option"
          >
            Grape
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-6"
            role="option"
          >
            Lemon
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-7"
            role="option"
          >
            Mango
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-8"
            role="option"
          >
            Melon
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-9"
            role="option"
          >
            Orange
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-10"
            role="option"
          >
            Peach
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-9"
            id="test-item-id-11"
            role="option"
          >
            Pear
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly opened and loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-7:last-of-type {
  margin-bottom: 0;
}

.emotion-7:empty {
  display: none;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-23 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-11:last-of-type {
  border-bottom: none;
}

.emotion-11:hover {
  background: #F0F0F5;
}

.emotion-11:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-10 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
  background: #F0F0F5;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  cursor: initial;
}

.emotion-10:last-of-type {
  border-bottom: none;
}

.emotion-10:hover {
  background: #F0F0F5;
}

.emotion-10:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-9 {
  pointer-events: none;
  font-size: 1rem;
  line-height: 1;
  color: #0069D0;
  float: right;
}

.emotion-9:after {
  -webkit-animation: animation-0 450ms infinite linear;
  animation: animation-0 450ms infinite linear;
  border: 2px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  content: "";
  display: inline-block;
  height: 1rem;
  width: 1rem;
}

<body>
  <div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <label
            class="emotion-0"
            for="test-input-id"
            id="test-label-id"
          >
            Fruits
          </label>
          <div
            class="emotion-5"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-labelledby="test-label-id"
              autocomplete="off"
              class="emotion-1"
              id="test-input-id"
              label="Fruits"
              role="combobox"
              type="text"
              value=""
            />
            <span
              class="emotion-4"
            >
              <button
                aria-controls="test-menu-id"
                aria-expanded="true"
                aria-label="Hide options"
                class="emotion-3"
                id="downshift-275-toggle-button"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-2"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="true"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-24"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-23"
          tabindex="-1"
        >
          <li
            class="emotion-10"
          >
            Loading...
            <span
              class="emotion-9"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-0"
            role="option"
          >
            Apple
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-1"
            role="option"
          >
            Avocado
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-2"
            role="option"
          >
            Banana
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-3"
            role="option"
          >
            Blueberry
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-4"
            role="option"
          >
            Coconut
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-5"
            role="option"
          >
            Grape
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-6"
            role="option"
          >
            Lemon
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-7"
            role="option"
          >
            Mango
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-8"
            role="option"
          >
            Melon
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-9"
            role="option"
          >
            Orange
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-10"
            role="option"
          >
            Peach
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-11"
            id="test-item-id-11"
            role="option"
          >
            Pear
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly opened with add-item 1`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-7:last-of-type {
  margin-bottom: 0;
}

.emotion-7:empty {
  display: none;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-10 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-9:last-of-type {
  border-bottom: none;
}

.emotion-9:hover {
  background: #F0F0F5;
}

.emotion-9:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<body>
  <div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <label
            class="emotion-0"
            for="test-input-id"
            id="test-label-id"
          >
            Fruits
          </label>
          <div
            class="emotion-5"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-labelledby="test-label-id"
              autocomplete="off"
              class="emotion-1"
              id="test-input-id"
              label="Fruits"
              role="combobox"
              type="text"
              value=""
            />
            <span
              class="emotion-4"
            >
              <button
                aria-controls="test-menu-id"
                aria-expanded="true"
                aria-label="Hide options"
                class="emotion-3"
                id="downshift-282-toggle-button"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-2"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-11"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-10"
          tabindex="-1"
        >
          <li
            class="emotion-9"
          >
            Select an item or type a new value
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`rendering renders correcly when items is empty (items: []) 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-6:first-of-type {
  margin-top: 0;
}

.emotion-6:last-of-type {
  margin-bottom: 0;
}

.emotion-6:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-8:last-of-type {
  border-bottom: none;
}

.emotion-8:hover {
  background: #F0F0F5;
}

.emotion-8:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-4"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-0"
            id="test-input-id"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-3"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-2"
              id="downshift-303-toggle-button"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-busy="false"
    aria-labelledby="test-label-id"
    id="test-menu-id"
    role="listbox"
  >
    <div
      class="emotion-10"
      data-testid="menu"
      style="position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <ul
        class="emotion-9"
        tabindex="-1"
      >
        <li
          class="emotion-8"
        >
          No results were found
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`rendering renders correcly when items is empty (items: null) 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-6:first-of-type {
  margin-top: 0;
}

.emotion-6:last-of-type {
  margin-bottom: 0;
}

.emotion-6:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-8:last-of-type {
  border-bottom: none;
}

.emotion-8:hover {
  background: #F0F0F5;
}

.emotion-8:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-4"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-0"
            id="test-input-id"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-3"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-2"
              id="downshift-289-toggle-button"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-busy="false"
    aria-labelledby="test-label-id"
    id="test-menu-id"
    role="listbox"
  >
    <div
      class="emotion-10"
      data-testid="menu"
      style="position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <ul
        class="emotion-9"
        tabindex="-1"
      >
        <li
          class="emotion-8"
        >
          No results were found
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`rendering renders correcly when items is empty (items: undefined) 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-6:first-of-type {
  margin-top: 0;
}

.emotion-6:last-of-type {
  margin-bottom: 0;
}

.emotion-6:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-8:last-of-type {
  border-bottom: none;
}

.emotion-8:hover {
  background: #F0F0F5;
}

.emotion-8:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-4"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="test-menu-id"
            aria-expanded="true"
            aria-labelledby="test-label-id"
            autocomplete="off"
            class="emotion-0"
            id="test-input-id"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="emotion-3"
          >
            <button
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-label="Hide options"
              class="emotion-2"
              id="downshift-296-toggle-button"
              tabindex="-1"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-busy="false"
    aria-labelledby="test-label-id"
    id="test-menu-id"
    role="listbox"
  >
    <div
      class="emotion-10"
      data-testid="menu"
      style="position: absolute; left: 0px; top: 0px; width: 0px;"
      tabindex="-1"
    >
      <ul
        class="emotion-9"
        tabindex="-1"
      >
        <li
          class="emotion-8"
        >
          No results were found
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`rendering renders correcly with custom components 1`] = `
.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-7:last-of-type {
  margin-bottom: 0;
}

.emotion-7:empty {
  display: none;
}

.emotion-0 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-4 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-1[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-1[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-1:required {
  box-shadow: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #696979;
}

.emotion-1::-moz-placeholder {
  color: #696979;
}

.emotion-1:-ms-input-placeholder {
  color: #696979;
}

.emotion-1::placeholder {
  color: #696979;
}

.emotion-1:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-1:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-1:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-1:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-3:focus {
  box-shadow: none;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-36 {
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
  list-style: none;
  margin: 0;
  padding: 0;
  background-color: #FFFFFF;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
}

.emotion-10 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-10:last-of-type {
  border-bottom: none;
}

.emotion-10:hover {
  background: #F0F0F5;
}

.emotion-10:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

.emotion-35 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-33 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
}

.emotion-34 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0069D0;
  color: #FFFFFF;
  border: 1px solid #0069D0;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-34 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-34:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-34:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-34:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-34:not(:disabled):hover {
  background-color: #0051A2;
}

.emotion-9 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  color: #217B00;
}

<body>
  <div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <div
          class="emotion-6"
        >
          <label
            class="emotion-0"
            for="test-input-id"
            id="test-label-id"
          >
            Fruit
          </label>
          <div
            class="emotion-5"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-menu-id"
              aria-expanded="true"
              aria-labelledby="test-label-id"
              autocomplete="off"
              class="emotion-1"
              id="test-input-id"
              label="Fruit"
              name="fruit"
              role="combobox"
              type="text"
              value=""
            />
            <span
              class="emotion-4"
            >
              <button
                aria-controls="test-menu-id"
                aria-expanded="true"
                aria-label="Hide options"
                class="emotion-3"
                id="downshift-310-toggle-button"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-2"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      aria-labelledby="test-label-id"
      id="test-menu-id"
      role="listbox"
    >
      <div
        class="emotion-37"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="menu"
        style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <ul
          class="emotion-36"
          tabindex="-1"
        >
          <div
            style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
          >
            Prepend item
          </div>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-0"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Apple
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-1"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Avocado
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-2"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Banana
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-3"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Blueberry
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-4"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Coconut
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-5"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Grape
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-6"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Lemon
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-7"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Mango
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-8"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Melon
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-9"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Orange
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-10"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Peach
            </span>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="emotion-10"
            id="test-item-id-11"
            role="option"
          >
            <span
              class="emotion-9"
            >
              Custom 
              Pear
            </span>
          </li>
          <div
            style="background: rgb(240, 240, 245); padding: 0.25rem 0.5rem; cursor: initial;"
          >
            <div
              class="emotion-35"
            >
              <span
                class="emotion-33"
              >
                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quod modi, inventore quasi aut sed beatae corrupti repellendus minima voluptatem debitis, quibusdam repudiandae totam voluptatum odit.
              </span>
              <button
                class="emotion-34"
                data-testid="action-btn"
                type="button"
              >
                <span>
                  New item
                </span>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
